--- a/operator/channels/packages/configconnector/1.101.0/cluster/gcp-identity/0-cnrm-system.yaml
+++ b/operator/channels/packages/configconnector/1.101.0/cluster/gcp-identity/0-cnrm-system.yaml
@@ -1782,6 +1782,10 @@ spec:
     metadata:
       annotations:
         cnrm.cloud.google.com/version: 1.101.0
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-cache-enable: "true"
+        vault.hashicorp.com/role: "config-connector"
+        # Additional annotations added by setVaultAnotations() at runtime
       labels:
         cnrm.cloud.google.com/component: cnrm-controller-manager
         cnrm.cloud.google.com/system: "true"
@@ -1793,7 +1797,7 @@ spec:
         - /configconnector/manager
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /var/secrets/google/key.json
+          value: /vault/secrets/gcp-key
         image: gcr.io/gke-release/cnrm/controller:411c879
         imagePullPolicy: Always
         name: manager
@@ -1816,16 +1820,9 @@ spec:
           privileged: false
           runAsNonRoot: true
           runAsUser: 1000
-        volumeMounts:
-        - mountPath: /var/secrets/google
-          name: gcp-service-account
       enableServiceLinks: false
       serviceAccountName: cnrm-controller-manager
       terminationGracePeriodSeconds: 10
-      volumes:
-      - name: gcp-service-account
-        secret:
-          secretName: gcp-key
 ---
 apiVersion: apps/v1
 kind: StatefulSet
