--- a/Makefile.fifteen
+++ b/Makefile.fifteen
@@ -1,10 +1,13 @@
-ALLOWED_CRDS := "ComputeAddress,ComputeForwardingRule,ComputeServiceAttachment,RunService,CloudSchedulerJob,IAMPolicyMember,IAMPartialPolicy,ComputeRegionNetworkEndpointGroup,ComputeBackendService,ComputeURLMap,ComputeTargetHTTPProxy,DNSRecordSet"
-OPERATOR_TAG := 0.2.1
+ALLOWED_CRDS := "ComputeAddress,ComputeForwardingRule,ComputeServiceAttachment,RunService,CloudSchedulerJob,IAMServiceAccount,IAMPolicyMember,IAMPartialPolicy,ComputeRegionNetworkEndpointGroup,ComputeBackendService,ComputeURLMap,ComputeTargetHTTPProxy,DNSRecordSet,PubSubTopic,EventarcTrigger"
+OPERATOR_TAG := 0.3.0
 IMAGE := eu.gcr.io/birota-cloud/cnrm-operator:${OPERATOR_TAG}
 
 fix-crds:
 	cd fix-manifests && go mod tidy
 	cd fix-manifests && go run . ${ALLOWED_CRDS}
+
+restore-crds:
+	mv operator/channels/packages/configconnector/1.101.0/crds.old.yaml operator/channels/packages/configconnector/1.101.0/crds.yaml
 
 build-operator:
 	docker build -t ${IMAGE} -f operator/Dockerfile .
