add node affinity selector

--- a/operator/channels/packages/configconnector/1.121.0/cluster/gcp-identity/0-cnrm-system.yaml
+++ b/operator/channels/packages/configconnector/1.121.0/cluster/gcp-identity/0-cnrm-system.yaml
@@ -2525,6 +2525,8 @@ spec:
         cnrm.cloud.google.com/component: cnrm-resource-stats-recorder
         cnrm.cloud.google.com/system: "true"
     spec:
+      nodeSelector:
+        pool: default
       containers:
       - args:
         - --prometheus-scrape-endpoint=:48797
@@ -2588,6 +2590,8 @@ spec:
         cnrm.cloud.google.com/component: cnrm-webhook-manager
         cnrm.cloud.google.com/system: "true"
     spec:
+      nodeSelector:
+        pool: default
       containers:
       - command:
         - /configconnector/webhook
@@ -2652,6 +2656,8 @@ spec:
         cnrm.cloud.google.com/component: cnrm-controller-manager
         cnrm.cloud.google.com/system: "true"
     spec:
+      nodeSelector:
+        pool: default
       containers:
       - args:
         - --prometheus-scrape-endpoint=:8888
@@ -2710,6 +2716,8 @@ spec:
         cnrm.cloud.google.com/component: cnrm-deletiondefender
         cnrm.cloud.google.com/system: "true"
     spec:
+      nodeSelector:
+        pool: default
       containers:
       - command:
         - /configconnector/deletiondefender
